--- a/package.json
+++ b/package.json
@@ -12,29 +12,24 @@
     "test": " yarn jest"
   },
   "dependencies": {
-    "@semantic-release/error": "^2.2.0",
-    "@types/request": "^2.48.4",
-    "jira-connector": "^3.1.0",
-    "lodash": "^4.17.19",
-    "p-limit": "^2.2.2",
-    "tslib": "^1.11.1"
+    "@semantic-release/error": "^3.0.0",
+    "@types/request": "^2.48.8",
+    "jira.js": "^2.14.0",
+    "lodash": "^4.17.21",
+    "p-limit": "^3.1.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/jest": "^26.0.5",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.9.5",
-    "@types/signale": "^1.4.0",
-    "jest": "^26.1.0",
-    "madge": "^3.8.0",
-    "tslint": "^6.1.0",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^28.1.1",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.41",
+    "@types/signale": "^1.4.4",
+    "jest": "^28.1.1",
+    "madge": "^5.0.1",
+    "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.8.3"
-  },
-  "resolutions": {
-    "**/gonzales-pe/minimist": "^1.2.5",
-    "typescript": "^3.8.3",
-    "**/typescript": "^3.8.3"
+    "typescript": "^4.7.3"
   }
 }
