--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "semantic-release-jira-releases",
-  "version": "0.7.2",
+  "name": "@waybetter/semantic-release-jira-releases",
+  "version": "0.8.0",
   "main": "dist/lib/index.js",
   "repository": "https://github.com/UpHabit/semantic-release-jira-releases",
   "license": "MIT",
