--- a/package.json
+++ b/package.json
@@ -13,23 +13,21 @@
   },
   "dependencies": {
     "@semantic-release/error": "^4.0.0",
-    "@types/request": "^2.48.8",
     "cosmiconfig": "^8.0.0",
     "jira.js": "^2.14.0",
     "lodash": "^4.17.21",
     "p-limit": "^4.0.0",
-    "tslib": "^2.4.0"
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
-    "@types/jest": "^28.1.1",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.41",
-    "@types/signale": "^1.4.4",
-    "jest": "^28.1.1",
-    "madge": "^5.0.1",
+    "@types/jest": "^29.5.6",
+    "@types/lodash": "^4.14.200",
+    "@types/node": "^20.8.7",
+    "@types/signale": "1.4.6",
+    "jest": "^29.7.0",
+    "madge": "^6.1.0",
+    "ts-jest": "^29.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   }
 }
