--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@waybetter/semantic-release-jira-releases",
-  "version": "0.9.2",
+  "version": "1.0.0",
   "main": "dist/lib/index.js",
   "type": "module",
   "repository": "https://github.com/UpHabit/semantic-release-jira-releases",
@@ -8,27 +8,32 @@
   "private": false,
   "scripts": {
     "prepublishOnly": "mkdir -p dist && rm -rf dist && tsc -p .",
-    "lint": "tslint -p .",
+    "lint": "eslint . --ignore-pattern \"dist/*\"",
     "build": "tsc -p .",
     "test": "jest"
   },
   "dependencies": {
     "@semantic-release/error": "^4.0.0",
-    "cosmiconfig": "^8.0.0",
-    "jira.js": "^2.14.0",
+    "cosmiconfig": "^9.0.0",
+    "jira.js": "^4.0.6",
     "lodash": "^4.17.21",
-    "p-limit": "^4.0.0",
+    "p-limit": "^6.2.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.6",
-    "@types/lodash": "^4.14.200",
-    "@types/node": "^20.8.7",
-    "@types/signale": "1.4.6",
+    "@eslint/js": "^9.17.0",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.14",
+    "@types/node": "^22.10.5",
+    "@types/signale": "^1.4.7",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "madge": "^6.1.0",
-    "ts-jest": "^29.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "^5.2.2"
+    "madge": "^8.0.0",
+    "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.19.1"
   }
 }
