--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2024",
+    "module": "ESNext",
     "strict": true,
     "outDir": "dist",
     "rootDir": ".",
